--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,18 @@
+/* 
+- There is space between all items and the edge of the header (specific px amount doesn't matter here).
+- Logo is centered vertically and horizontally.
+- list-items are horizontal, and are centered vertically inside the header.
+- left-links and right-links are pushed all the way to the left and right, and stay at the edge of the header when the page is resized.
+- Your solution does not use floats, inline-block, or absolute positioning.
+*/
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -9,17 +21,44 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+
+  justify-content: center;
+  align-self: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding-inline-start: unset;
+  margin: 0;
+  /* margin: 0;
+  padding: 0; */
+  display: flex;
+  gap: 10px;
 }
 
 a {
   font-size: 22px;
   background: white;
+  color: blue;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+li {
+  display: flex;
+}
+
+.left-links .right-links {
+  color: blue;
+  align-items: center;
+}
+
+/* .left-links {
+  justify-content: flex-start;
+}
+
+.right-links {
+  justify-content: flex-end;
+} */
