--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -1,3 +1,11 @@
+/* 
+- Everything is centered vertically inside the header.
+- There is 8px space between everything and the edge of the header.
+- Items are arranged horizontally as seen in the outcome image.
+- There is 16px between each item on both sides of the header.
+- flex is used to arrange everything.
+*/
+
 /* this is some magical font-importing.  
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
@@ -12,6 +20,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -46,3 +57,41 @@ a {
 ul {
   list-style-type: none;
 }
+
+.links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  gap: 20px;
+}
+
+.left-container, .right-container {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin: 0 20px;
+}
+
+/* .left-container {
+  margin: 0 20px;
+}
+
+.right-container {
+  margin: 0 20px;
+} */
+
+/* .left-container {
+  display: flex;
+  margin-left: 20px;
+  gap: 20px;
+}
+
+.right-container {
+  display: flex;
+  margin-right: 20px;
+  gap: 20px;
+  /* justify-content: flex-end;
+  align-items: center; */
+/*} */
