--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 10px 10px 10px 0;
 }
 
 .icon {
@@ -33,6 +35,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* flex: 1 1 auto; */
+  flex-shrink: 0;
+  margin: 10px;
 }
 
 .close-button {
@@ -63,4 +68,25 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.alert {
+  display: flex;
+  flex-direction: column;
+  /* margin: 10px 10px 10px 0; */
+  /* justify-content: center; */
+  gap: 10px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+  font-size: larger;
+}
+
+.choose {
+  display: flex;
+  gap: 5px;
 }
